crates/kdl-config-derive/tests/ui/default_invalid_literal.stderr
error: default value must be a literal or negated literal
 --> tests/ui/default_invalid_literal.rs:5:21
  |
5 |     #[kdl(default = [1, 2, 3])]
  |                     ^^^^^^^^^
